--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,12 @@
-#DATABASE_URL=postgres://wehirenow_user:mdp@localhost:5432/wehirenow_db
+DATABASE_URL=postgres://wehirenow_user:mdp@localhost:5432/wehirenow_db
 SESSION_SECRET=change_this_secret
 PORT=8085
 
 PGHOST=localhost
 PGUSER=wehirenow_user
-PGPASSWORD=mdp
+PGPASSWORD=Patachou0+           #OR mdp
 PGDATABASE=wehirenow_db
 PGPORT=5432
 JWT_SECRET=secret
+
 
