--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,15 @@
-#DATABASE_URL=postgres://wehirenow_user:mdp@localhost:5432/wehirenow_db
-#SESSION_SECRET=change_this_secret
-#PORT=8085
+SESSION_SECRET=change_this_secret
+PORT=8085
 
-#PGHOST=localhost
-#PGUSER=wehirenow_user
-#PGPASSWORD=mdp
-#PGDATABASE=wehirenow_db
-#PGPORT=5432
-#JWT_SECRET=secret
+PGHOST=localhost
+PGUSER=root
+PGPASSWORD=SQLEFREI
+PGDATABASE=wehirenow_db
+PGPORT=3306
+JWT_SECRET=secret
 
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=your_mysql_user
-DB_PASS=your_mysql_password
+DB_USER=root
+DB_PASSWORD=SQLEFREI
 DB_NAME=wehirenow_db   # or the name you chose in HeidiSQL
