Login Candidate and Database OK

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ PORT=8085
 
 PGHOST=localhost
 PGUSER=wehirenow_user
-PGPASSWORD=Patachou0+           #OR mdp
+PGPASSWORD=mdp          #OR Patachou0+
 PGDATABASE=wehirenow_db
 PGPORT=5432
 JWT_SECRET=secret
