Candidate is complete and over for now

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ PORT=8085
 
 PGHOST=localhost
 PGUSER=wehirenow_user
-PGPASSWORD=mdp          #OR Patachou0+
+PGPASSWORD=mdp
 PGDATABASE=wehirenow_db
 PGPORT=5432
 JWT_SECRET=secret
