Ok for postgresql

--- a/backend/.env
+++ b/backend/.env
@@ -3,10 +3,10 @@ SESSION_SECRET=change_this_secret
 PORT=8085
 
 PGHOST=localhost
-PGUSER=root
-PGPASSWORD=mdp
+PGUSER=wehirenow_user                       # or root
+PGPASSWORD=mdp                              #SQLEFREI
 PGDATABASE=wehirenow_db
-PGPORT=3306
+PGPORT=5432                                 #or 3306
 JWT_SECRET=secret
 
 
